# automatic-link-opener

./: README.md  install.sh  link-opener.service  pyproject.toml
opening/: config_editor.py  daemon.py
tests/: test_opening.py
