[tool.poetry]
name = "opening"
version = "0.1.0"
description = ""
authors = ["Otisdog8 <otis@otisroot.com>"]

[tool.poetry.dependencies]
python = "^3.9"
watchdog = "^2.0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
